# axiv

./: Cargo.toml  README.md
src/: README.md  lib.rs  main.rs  settings.rs
src/data/: entities.rs  integrator.rs  mod.rs  readers.rs
test_data/: invalid_hotels_data.csv  invalid_rooms_data.csv
tests/: integrate_data.rs
