[package]
name = "axiv"
version = "1.0.0"
authors = ["Sniadek <karolgruszka9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
# Serde and its dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4.15"
anyhow = "1.0.32"

[dev-dependencies]
serde_test = "1.0.116"
file_diff = "1.0.0"